# core-to-isabelle

./: .gitignore  README.md  core-to-isabelle.cabal
examples/: .gitignore  Foo.hs  Haskell_Map.hs  IdId.hs  Makefile  Maybe.thy  MultipleDefinitions.hs  SimpleList.hs  Strict.hs  Tree.hs  TypeSwap.hs
isa/: CoreSemantics.thy  CoreSyntax.thy  CoreSyntaxNominal.thy  Defl_Lib.thy  Examples.thy  Halicore.thy  Halicore_Commands.thy  Halicore_Defs.thy  Halicore_Kind.thy  Halicore_Prelude.thy  Halicore_Simprocs.thy  Halicore_Syntax.thy  Halicore_Terms.thy  Halicore_Type_Deep.thy  Halicore_Type_Meaning.thy  Halicore_Typecheck.thy  INSTALL  IdEx.core  IsaMakefile  ListEnv.thy  List_Cpo.thy  ROOT.ML  Shallow.thy  ShallowTest.hs  Skip.thy  datatype.ML  function.ML  isar-keywords.el  typecheck.ML
isa/document/: root.tex
isa/examples/: IdId.thy  Maybe.hs  Maybe.thy
isa/other/: EFO_Terms.thy  Lam_Funs_HOL.thy  Lam_Funs_HOLCF.thy  Lam_Funs_Nominal.thy
src/: Core2Isa.hs  Hcr2Thy.hs  Main.hs
src/Language/Core/: Isabelle.hs
