cabal-version:       >= 1.2
build-type:          Simple
name:                core-to-isabelle
version:             0.0
synopsis:            Translator from GHC Core to Isabelle/HOLCF
category:            Math
license:             BSD3
--author:
--maintainer:

executable core-to-isabelle
    hs-source-dirs:      src
    main-is:             Main.hs
    ghc-options:         -Wall -fno-warn-orphans -fwarn-tabs
    if os(darwin)
       ghc-options:      -optl-Wl,-dead_strip
    ghc-prof-options:    -auto-all
    build-depends:       base > 4,
                         ghc >= 6.12 && < 8,
                         ghc-paths,
                         process == 1.0.*

executable hcr2thy
    hs-source-dirs:      src
    main-is:             Hcr2Thy.hs
    if os(darwin)
       ghc-options:      -optl-Wl,-dead_strip
    ghc-options:         -Wall
    build-depends:       extcore == 1.0.*,
                         filepath == 1.2.*,
                         bytestring == 0.9.*,
                         text == 0.11.*,
                         wl-pprint-text == 1.0.*,
                         zenc == 0.1.*
